=== Alexander-28 ===

2002-10-17  Darin Adler  <darin@apple.com>

	- fixed 3077856 -- REGRESSION: scroll to fragment doesn't work
	(except when Alex started from command line)

        * kwq/kparts/browserextension.h: Initialize reload to false. It was
	uninitialized, and when true was preventing anchor navigation from working.

2002-10-17  Darin Adler  <darin@apple.com>

	- fixed 3075992 -- Hang in khtml::RenderFlow::lowestPosition() trying to
	render http://avoyagetoarcturus.blogspot.com/

        * khtml/rendering/render_flow.cpp:
        (RenderFlow::lowestPosition): Don't recurse on the same child twice.
        (RenderFlow::rightmostPosition): Ditto.

2002-10-17  David Hyatt  <hyatt@apple.com>

	Fix bayarea.com.  My implementation of offsetParent was
	flawed.  And to think I was blaming Gecko... ;)
	
        * khtml/rendering/render_object.cpp:
        (RenderObject::offsetParent):

2002-10-16  Darin Adler  <darin@apple.com>

	- fixed 3061103 -- Line-breaks lost when submitting after pasting text from
	MSIE into Alexander textarea

        * kwq/KWQLineEdit.mm: (QLineEdit::text):
        * kwq/KWQTextEdit.mm: (QTextEdit::text):
	Turn \r\n sequences and standalone \r characters into \n characters on the way
	out of AppKit land and into KHTML land. I didn't try to make this efficient
	for the common case because these are not time-critical functions.

2002-10-16  Richard Williamson  <rjw@apple.com>

        Fixed a few regressions in drawing of frame resize handle
        in preparation for drawing frame borders and completing
        2982466.
        
        * khtml/rendering/render_frames.cpp:
        (RenderFrameSet::userResize):
        * kwq/KWQPainter.mm:
        (QPainter::drawRect):
        * kwq/qt/qscrollview.h:
        * kwq/KWQScrollView.mm:
        (QScrollView::updateContents):
        * kwq/KWQWidget.mm:
        (QWidget::enableFlushDrawing):
        
        Use static_cast everywhere DOM::NodeImpl is cast to
        subclass.
        