@@ -1,3 +1,11 @@
+2002-10-17  David Hyatt  <hyatt@apple.com>
+
+	Make navigator.product dynamic based off user agent (i.e.,
+	make it participate in spoofing too).
+	
+        * khtml/ecma/kjs_navigator.cpp:
+        (Navigator::getValueProperty):
+
 === Alexander-28 ===
 
 2002-10-17  Darin Adler  <darin@apple.com>
